force-app/main/default/objects/Compliance_Check__c/Compliance_Check__c.object-meta.xml
<CustomObject>
    <description>Manage background check process by compliance team.</description>
    <label>Compliance Check</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Compliance Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>