force-app/main/default/objects/Compliance_Check__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Date that the compliance check was completed.</description>
    <inlineHelpText>Date that the compliance check was completed.</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>