force-app/main/default/objects/Compliance_Check__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Subject of compliance check</description>
    <inlineHelpText>Subject of compliance check</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compliance Checks</relationshipLabel>
    <relationshipName>Compliance_Check</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>