force-app/main/default/objects/Compliance_Check__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Provider of compliance check.</description>
    <inlineHelpText>Provider of compliance check.</inlineHelpText>
    <label>Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>